[package]
name = "rust_streamer"
version = "0.1.0"
edition = "2021"


[dependencies]
rdkafka = "0.33.0"
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
futures-util = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
